test/libsolidity/syntaxTests/imports/name_clash_in_import_struct_contract_4.sol
==== Source: a ====
struct A { uint256 a; }
==== Source: b ====
import {A} from "a";
contract A {}
// ----
// DeclarationError: (b:21-34): Identifier already declared.
